--- a/personalWebsite/index.html
+++ b/personalWebsite/index.html
@@ -16,65 +16,71 @@
 </head>
 <body>
 
-    <!-- Hero Section -->
-    <section class="hero d-flex align-items-center" id="home">
-        <div class="container">
-            <div class="hero-content">
-                <div class="text-content">
-                    <h1>
-                        Hello, I'm <br> 
-                        <span class="typed-name-container">
-                            <span id="typed-name"></span>
-                        </span>
-                    </h1>                    
-                </div>
-                <img src="images/profile-picture.png" alt="Profile Picture" class="profile-picture">
-            </div>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse mx-auto" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#home">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#projects">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#experience">Experience</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contact</a>
+                </li>
+            </ul>
         </div>
-    </section>
+    </nav>
+
+    <!-- Hero Section -->
+<section class="hero d-flex align-items-center" id="home">
+    <div class="container">
+        <div class="hero-content">
+            <div class="text-content">
+                <h1>Hello, I'm <br> <span id="typed-name"></span></h1>
+            </div>
+            <img src="images/profile-picture.png" alt="Profile Picture" class="profile-picture">
+        </div>
+    </div>
+</section>
 
     <!-- About Section -->
-    <section class="about py-5" id="about">
-        <div class="container text-center">
-            <h2>About Me</h2>
-            <p>A story of hard work and perseverance.</p>
-            <div class="row">
-                <div class="col-md-4">
-                    <h3>16+</h3>
-                    <p>Years of Experience</p>
-                </div>
-                <div class="col-md-4">
-                    <h3>215+</h3>
-                    <p>Projects Completed</p>
-                </div>
-                <div class="col-md-4">
-                    <h3>97+</h3>
-                    <p>Happy Clients</p>
-                </div>
+<section class="about py-5" id="about">
+    <div class="container text-center">
+        <h2>About Me</h2>
+        <p>Hi! My tech journey began with a love for sandbox games, where I discovered the joy of letting my creativity run free. I'm a Computer Science student at the University of Wisconsin, Madison, graduating in May 2026, with a passion for all areas within the CS field. While at UIC, I was actively involved in the tech community, holding four board positions and participating in a research role. I'm excited about finding a 2025 internship where I can meet new people, apply my skills, and continue growing. On a more personal note, I love Pusheens and puzzle games, and I am enthusiastic about personal growth. Pushing myself out of my comfort zone excites me because it means improving. If this sounds interesting, let's connect!</p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
-    <!-- Services Section -->
-    <section class="services py-5" id="services">
-        <div class="container text-center">
-            <h2>Services</h2>
-            <div class="row">
-                <div class="col-md-4">
-                    <h3>UI & UX Design</h3>
-                    <p>Beautiful, intuitive interfaces that provide great user experiences.</p>
-                </div>
-                <div class="col-md-4">
-                    <h3>Graphic Design</h3>
-                    <p>Creative and impactful designs for brands and businesses.</p>
-                </div>
-                <div class="col-md-4">
-                    <h3>Web Design</h3>
-                    <p>Modern websites that are fully responsive and fast.</p>
-                </div>
+    <!-- Projects Section -->
+<section class="projects py-5" id="projects">
+    <div class="container text-center">
+        <h2>Projects</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <h3>Project 1</h3>
+                <p>Brief description of Project 1.</p>
+            </div>
+            <div class="col-md-4">
+                <h3>Project 2</h3>
+                <p>Brief description of Project 2.</p>
+            </div>
+            <div class="col-md-4">
+                <h3>Project 3</h3>
+                <p>Brief description of Project 3.</p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Bootstrap JS and Dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
