--- a/personalWebsite/index.html
+++ b/personalWebsite/index.html
@@ -39,17 +39,17 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
-<section class="hero d-flex align-items-center" id="home">
-    <div class="container">
-        <div class="hero-content">
-            <div class="text-content">
-                <h1>Hello, I'm <br> <span id="typed-name"></span></h1>
+    <section class="hero d-flex align-items-center" id="home">
+        <div class="container">
+            <div class="hero-content">
+                <div class="orange-box"></div> <!-- New orange box -->
+                <div class="text-content">
+                    <h1>Hello, I'm <br> <span id="typed-name"></span></h1>
+                </div>
+                <img src="images/profile-picture.png" alt="Profile Picture" class="profile-picture">
             </div>
-            <img src="images/profile-picture.png" alt="Profile Picture" class="profile-picture">
         </div>
-    </div>
-</section>
+    </section>     
 
     <!-- About Section -->
 <section class="about py-5" id="about">
@@ -62,23 +62,22 @@
 </section>
 
     <!-- Projects Section -->
-<section class="projects py-5" id="projects">
-    <div class="container text-center">
-        <h2>Projects</h2>
-        <div class="row">
-            <div class="col-md-4">
-                <h3>Project 1</h3>
-                <p>Brief description of Project 1.</p>
-            </div>
-            <div class="col-md-4">
-                <h3>Project 2</h3>
-                <p>Brief description of Project 2.</p>
-            </div>
-            <div class="col-md-4">
-                <h3>Project 3</h3>
-                <p>Brief description of Project 3.</p>
-            </div>
+<section class="projects">
+    <h2>My Projects</h2>
+    <div class="projects-wrapper">
+        <div class="projects-content">
+            <!-- Clone of the last project -->
+            <div class="project-item normal">Project 5</div>
+            <!-- Regular Projects -->
+            <div class="project-item normal">Project 1</div>
+            <div class="project-item middle">Project 2</div>
+            <div class="project-item normal">Project 3</div>
+            <div class="project-item normal">Project 4</div>
+            <!-- Clone of the first project -->
+            <div class="project-item normal">Project 1</div>
         </div>
+        <div class="carousel-arrow up-arrow">&#9650;</div>
+        <div class="carousel-arrow down-arrow">&#9660;</div>
     </div>
 </section>
 
