--- a/personalWebsite/index.html
+++ b/personalWebsite/index.html
@@ -62,24 +62,20 @@
 </section>
 
     <!-- Projects Section -->
-<section class="projects">
-    <h2>My Projects</h2>
-    <div class="projects-wrapper">
-        <div class="projects-content">
-            <!-- Clone of the last project -->
-            <div class="project-item normal">Project 5</div>
-            <!-- Regular Projects -->
-            <div class="project-item normal">Project 1</div>
-            <div class="project-item middle">Project 2</div>
-            <div class="project-item normal">Project 3</div>
-            <div class="project-item normal">Project 4</div>
-            <!-- Clone of the first project -->
-            <div class="project-item normal">Project 1</div>
+    <section class="projects">
+        <h2 class="text-center">My Projects</h2>
+        <div class="projects-wrapper">
+            <div class="carousel-arrow left-arrow">&#9664;</div>
+            <div class="projects-content d-flex justify-content-center">
+                <div class="project-item normal">Project 1</div>
+                <div class="project-item middle">Project 2</div>
+                <div class="project-item normal">Project 3</div>
+                <div class="project-item normal">Project 4</div>
+                <div class="project-item normal">Project 5</div>
+            </div>
+            <div class="carousel-arrow right-arrow">&#9654;</div>
         </div>
-        <div class="carousel-arrow up-arrow">&#9650;</div>
-        <div class="carousel-arrow down-arrow">&#9660;</div>
-    </div>
-</section>
+    </section>    
 
     <!-- Bootstrap JS and Dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
