--- a/personalWebsite/index.html
+++ b/personalWebsite/index.html
@@ -17,27 +17,15 @@
 <body>
 
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse mx-auto" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#home">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#projects">Projects</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#experience">Experience</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact</a>
-                </li>
-            </ul>
+    <nav class="navbar navbar-expand navbar-light">
+        <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="#home">Home</a>
+            <a class="nav-item nav-link" href="#projects">Projects</a>
+            <a class="nav-item nav-link" href="#experience">Experience</a>
+            <a class="nav-item nav-link" href="#contact">Contact</a>
         </div>
     </nav>
+
 
     <section class="hero d-flex align-items-center" id="home">
         <div class="container">
