--- a/personalWebsite/index.html
+++ b/personalWebsite/index.html
@@ -34,7 +34,7 @@
                 <div class="text-content">
                     <h1>Hello, I'm <br> <span id="typed-name"></span></h1>
                 </div>
-                <img src="images/profile-picture.png" alt="Profile Picture" class="profile-picture">
+                <img src="images/pfp2.png" alt="Profile Picture" class="profile-picture">
             </div>
         </div>
     </section>       
@@ -50,71 +50,22 @@
 </section>
 
     <!-- Projects Section -->
-<section class="projects">
-    <h2 class="text-center">My Projects</h2>
-    <div class="projects-wrapper">
-        <div class="carousel-arrow left-arrow">&#9664;</div>
-        <div class="projects-content d-flex justify-content-center">
-            <!-- Project 1 -->
-            <a href="https://example.com/project1" target="_blank" class="project-item normal">
-                <div class="project-image">
-                    <img src="images/project1.png" alt="Project 1">
-                </div>
-                <div class="project-content">
-                    <h3>Project 1</h3>
-                    <p class="project-description">A brief description of Project 1. This project involves...</p>
-                    <p class="project-skills">Skills: HTML, CSS, JavaScript</p>
-                </div>
-            </a>
-            <!-- Project 2 -->
-            <a href="https://example.com/project2" target="_blank" class="project-item middle">
-                <div class="project-image">
-                    <img src="images/project2.png" alt="Project 2">
-                </div>
-                <div class="project-content">
-                    <h3>Project 2</h3>
-                    <p class="project-description">A brief description of Project 2. This project involves...</p>
-                    <p class="project-skills">Skills: React, Node.js</p>
-                </div>
-            </a>
-            <!-- Project 3 -->
-            <a href="https://example.com/project3" target="_blank" class="project-item normal">
-                <div class="project-image">
-                    <img src="images/project3.png" alt="Project 3">
-                </div>
-                <div class="project-content">
-                    <h3>Project 3</h3>
-                    <p class="project-description">A brief description of Project 3. This project involves...</p>
-                    <p class="project-skills">Skills: Python, Django</p>
-                </div>
-            </a>
-            <!-- Project 4 -->
-            <a href="https://example.com/project4" target="_blank" class="project-item normal">
-                <div class="project-image">
-                    <img src="images/project4.png" alt="Project 4">
-                </div>
-                <div class="project-content">
-                    <h3>Project 4</h3>
-                    <p class="project-description">A brief description of Project 4. This project involves...</p>
-                    <p class="project-skills">Skills: PHP, MySQL</p>
-                </div>
-            </a>
-            <!-- Project 5 -->
-            <a href="https://example.com/project5" target="_blank" class="project-item normal">
-                <div class="project-image">
-                    <img src="images/project5.png" alt="Project 5">
-                </div>
-                <div class="project-content">
-                    <h3>Project 5</h3>
-                    <p class="project-description">A brief description of Project 5. This project involves...</p>
-                    <p class="project-skills">Skills: Vue.js, Firebase</p>
-                </div>
-            </a>
+    <section class="projects">
+        <h2>My Projects</h2>
+        <div class="projects-grid">
+            <div class="project-item">
+                <h3>Project 1</h3>
+                <p>A brief description of Project 1. This project involves...</p>
+                <p>Skills: HTML, CSS, JavaScript</p>
+            </div>
+            <div class="project-item">
+                <h3>Project 2</h3>
+                <p>A brief description of Project 2. This project involves...</p>
+                <p>Skills: React, Node.js</p>
+            </div>
+            <!-- Add more project items as needed -->
         </div>
-        <div class="carousel-arrow right-arrow">&#9654;</div>
-    </div>
-</section>
-
+    </section>    
 
    <!-- Experience Section -->
 <section class="experience py-5" id="experience">
