--- a/personalWebsite/index.html
+++ b/personalWebsite/index.html
@@ -29,21 +29,29 @@
 
     <section class="hero d-flex align-items-center" id="home">
         <div class="hero-background-elements">
-            <svg width="400" height="400" style="position: absolute; top: 19%; left:60.5%; opacity: 0.4;">
-                <circle cx="180" cy="180" r="180" fill="#ffe4d5" />
+            <svg width="400" height="400" style="position: absolute; top: 19%; left:60%; opacity: 0.4;">
+                <circle cx="190" cy="190" r="190" fill="#ffe4d5" />
             </svg>
             <svg width="80" height="80" style="position: absolute; top: 30%; right: 15%; opacity: 0.5;">
-                <rect width="10" height="10" fill="#cfd8dc" />
+                <rect x="0" y="0" width="10" height="10" fill="#cfd8dc" />
+                <rect x="20" y="0" width="10" height="10" fill="#cfd8dc" />
+                <rect x="40" y="0" width="10" height="10" fill="#cfd8dc" />
+                <rect x="0" y="20" width="10" height="10" fill="#cfd8dc" />
+                <rect x="20" y="20" width="10" height="10" fill="#cfd8dc" />
+                <rect x="40" y="20" width="10" height="10" fill="#cfd8dc" />
+                <rect x="0" y="45" width="10" height="10" fill="#cfd8dc" />
+                <rect x="20" y="45" width="10" height="10" fill="#cfd8dc" />
+                <rect x="40" y="45" width="10" height="10" fill="#cfd8dc" />
                 <!-- Add more small squares here for a grid effect -->
             </svg>
         </div>
         <div class="orange-box"></div> <!-- New orange box -->
+        <img src="images/pfp2.png" alt="Profile Picture" class="profile-picture">
         <div class="container">
             <div class="hero-content">
                 <div class="text-content">
                     <h1>Hello, I'm <br> <span id="typed-name"></span></h1>
                 </div>
-                <img src="images/pfp2.png" alt="Profile Picture" class="profile-picture">
             </div>
         </div>
     </section>       
