--- a/personalWebsite/index.html
+++ b/personalWebsite/index.html
@@ -137,7 +137,7 @@
             <div class="timeline-item">
                 <div class="timeline-icon"></div>
                 <div class="timeline-content">
-                    <img src="path_to_logo.png" alt="Company Logo" class="timeline-logo">
+                    <img src="images/abbvie-logo.jpg" alt="Abbvie Logo" class="timeline-logo">
 
                     <h3>Role 1</h3>
                     <p class="timeline-date">Company Name - Dates</p>
@@ -147,7 +147,27 @@
             <div class="timeline-item">
                 <div class="timeline-icon"></div>
                 <div class="timeline-content">
-                    <img src="path_to_logo.png" alt="Company Logo" class="timeline-logo">
+                    <img src="images/uic-logo.jpg" alt="UIC Logo" class="timeline-logo">
+
+                    <h3>Role 2</h3>
+                    <p class="timeline-date">Company Name - Dates</p>
+                    <p>Brief description of responsibilities and achievements. Highlight key accomplishments and skills gained.</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-icon"></div>
+                <div class="timeline-content">
+                    <img src="images/kpmg-logo.jpg" alt="KPMG Logo" class="timeline-logo">
+
+                    <h3>Role 2</h3>
+                    <p class="timeline-date">Company Name - Dates</p>
+                    <p>Brief description of responsibilities and achievements. Highlight key accomplishments and skills gained.</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-icon"></div>
+                <div class="timeline-content">
+                    <img src="images/uwm-logo.jpg" alt="UW-Mad Logo" class="timeline-logo">
 
                     <h3>Role 2</h3>
                     <p class="timeline-date">Company Name - Dates</p>
@@ -172,7 +192,7 @@
             <div class="timeline-item">
                 <div class="timeline-icon"></div>
                 <div class="timeline-content">
-                    <img src="path_to_logo.png" alt="Company Logo" class="timeline-logo">
+                    <img src="images/wics logo.png" alt="WiCS Logo" class="timeline-logo">
 
                     <h3>Role 1</h3>
                     <p class="timeline-date">Company Name - Dates</p>
@@ -182,7 +202,17 @@
             <div class="timeline-item">
                 <div class="timeline-icon"></div>
                 <div class="timeline-content">
-                    <img src="path_to_logo.png" alt="Company Logo" class="timeline-logo">
+                    <img src="images/logicalogo.png" alt="LOGICA Logo" class="timeline-logo">
+
+                    <h3>Role 2</h3>
+                    <p class="timeline-date">Company Name - Dates</p>
+                    <p>Brief description of responsibilities and achievements. Highlight key accomplishments and skills gained.</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-icon"></div>
+                <div class="timeline-content">
+                    <img src="images/sparkhacks.gif" alt="LOGICA Logo" class="timeline-logo">
 
                     <h3>Role 2</h3>
                     <p class="timeline-date">Company Name - Dates</p>
